SSHSearchDatabase written and tested with fake data